gcc 4.8.5 comiles on centos 6.
Scripts here untested; they're just my notes from a manual build.

--- a/base-centos6/Dockerfile
+++ b/base-centos6/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER    Ralph Giles <giles@mozilla.com>
 
 # Update and install base tools.
 RUN yum upgrade -y
-RUN yum install -y make tar xz bzip2 git binutils gcc g++ m4
+RUN yum install -y make tar xz bzip2 git binutils gcc gcc-c++
 RUN yum clean all
 
 # Create user for doing the build.
